# mystikos-security

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
src/dynamic/fuzzing/: CMakeLists.txt
src/dynamic/fuzzing/common/: fuzzsupport.edl  syscallfuzzer.h
src/dynamic/fuzzing/fuzzsupport/: CMakeLists.txt
src/dynamic/fuzzing/fuzzsupport/enc/: CMakeLists.txt  enc.c  enc_proxy.cpp  kernel_symbol.cpp  kernel_symbol.h  libc.c  myst_tcalls.h  stdio_impl.h
src/dynamic/fuzzing/fuzzsupport/enc/printfs/: __fprintf_chk.c  __printf_chk.c  __snprintf_chk.c  __sprintf_chk.c  __vfprintf_chk.c  __vprintf_chk.c  __vsnprintf_chk.c  __vsprintf_chk.c
src/dynamic/fuzzing/fuzzsupport/host/: CMakeLists.txt  host.cpp
src/dynamic/fuzzing/fuzzsupport/libunwind/: CMakeLists.txt  Gstep.c  stubs.h
src/dynamic/fuzzing/syscallfuzzer/: CMakeLists.txt  child.c  params.c  trinity.c
src/dynamic/fuzzing/syscallfuzzer/syscalls/: futex.c
